jigsaw alignment error fixing

--- a/app/stylesheets/flip_classes.sass
+++ b/app/stylesheets/flip_classes.sass
@@ -21,8 +21,8 @@
   border: 2px solid #2d92be
   border-radius: 5px
   height: 235px
-  margin: 30px 35px
-  width: 280px
+  margin: 10px 25px
+  width: 210px
   float: left
   background-color: #f0f9fe
 
@@ -38,13 +38,13 @@
 
 .class_name
   margin: 30px
-  font-size: 200%
+  font-size: 125%
   font-weight: bold
   color: #7F8C8D
   line-height: 1.5
 
 .class_preview_box
-  min-height: 80px
+  min-height: 69px
   border: 1px solid #eaeef1
   margin-bottom: 20px
   border-radius: 5px
